@@ -29,7 +29,7 @@
     <File name="MonoDevelop.Projects/DomPersistenceTests.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.CSharpBinding/TopLevelTests.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.CSharpBinding/MemberTests.cs" subtype="Code" buildaction="Compile" />
-    <File name="MonoDevelop.CSharpBinding/CodeCompletionTests.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.CSharpBinding/TestViewContent.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.CSharpBinding/CodeCompletionOperatorTests.cs" subtype="Code" buildaction="Compile" />
@@ -49,6 +49,7 @@
     <File name="MonoDevelop.Xml.StateEngine/ParsingTests.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Xml.StateEngine/TestParser.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
