@@ -1,5 +1,15 @@
 2008-10-29  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs:
+	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
+	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs:
+	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
+	* MonoDevelop.CSharpBinding/CodeCompletionOperatorTests.cs:
+	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Added some
+	unit tests.
+
+2008-10-29  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added  unit test for
 	"Bug 439601 - Intellisense Broken For Partial Classes".
 
